{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 12,
  "lineage": "548cebdb-fce0-7347-44c9-fd61e1985399",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/swift-firmament-358410/global/networks/vpc-news4321",
            "name": "vpc-news4321",
            "self_link": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/global/networks/vpc-news4321",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/regions/us-central1/subnetworks/subnet-news4321"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.5.0.1",
            "id": "projects/swift-firmament-358410/regions/us-central1/subnetworks/subnet-news4321",
            "ip_cidr_range": "10.5.0.0/16",
            "name": "subnet-news4321",
            "network": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/global/networks/vpc-news4321",
            "private_ip_google_access": false,
            "project": "swift-firmament-358410",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/regions/us-central1/subnetworks/subnet-news4321"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-09T10:37:29.515-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/swift-firmament-358410/global/firewalls/front-end-firewall",
            "log_config": [],
            "name": "front-end-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/global/networks/vpc-news4321",
            "priority": 1000,
            "project": "swift-firmament-358410",
            "self_link": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/global/firewalls/front-end-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "newsfeed",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8081"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-09T10:37:29.491-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/swift-firmament-358410/global/firewalls/newsfeed-firewall",
            "log_config": [],
            "name": "newsfeed-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/global/networks/vpc-news4321",
            "priority": 1000,
            "project": "swift-firmament-358410",
            "self_link": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/global/firewalls/newsfeed-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "newsfeed"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "quotes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8082"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-09T10:37:29.486-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/swift-firmament-358410/global/firewalls/quotes-firewall",
            "log_config": [],
            "name": "quotes-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/global/networks/vpc-news4321",
            "priority": 1000,
            "project": "swift-firmament-358410",
            "self_link": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/global/firewalls/quotes-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "quotes"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-89-16108-717-9",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/zones/us-central1-a/disks/news4321-front-end"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/swift-firmament-358410/zones/us-central1-a/instances/news4321-front-end",
            "instance_id": "2178130909992002974",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "A7bAgRVX2W4=",
            "metadata_startup_script": "#!/bin/bash\necho \"Provisioning docker image gcr.io/swift-firmament-358410/front_end:latest\" | tee /var/log/provision.log\n\nexport HOME=\"/home/cloudservice\"\n\n# cleanup previous deployment\ndocker stop front_end || true\ndocker rm front_end || true\n\ndocker-credential-gcr configure-docker\n\ndocker pull gcr.io/swift-firmament-358410/front_end:latest\n\ndocker run -d \\\n  --name front_end \\\n  --restart always \\\n  -e QUOTE_SERVICE_URL=http://34.1 [...]
            "name": "news4321-front-end",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.133.78.250",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/global/networks/vpc-news4321",
                "network_ip": "10.5.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/regions/us-central1/subnetworks/subnet-news4321",
                "subnetwork_project": "swift-firmament-358410"
              }
            ],
            "project": "swift-firmament-358410",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/zones/us-central1-a/instances/news4321-front-end",
            "service_account": [
              {
                "email": "news4321-compute@swift-firmament-358410.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform.read-only",
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/source.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_subnetwork.subnet",
            "data.template_file.front_end_init_script",
            "data.template_file.newsfeed_init_script",
            "data.template_file.quotes_init_script",
            "google_compute_instance.newsfeed",
            "google_compute_instance.quotes",
            "google_service_account.joi-news-instances",
            "google_storage_bucket.news"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "newsfeed",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-89-16108-717-9",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/zones/us-central1-a/disks/news4321-newsfeed"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/swift-firmament-358410/zones/us-central1-a/instances/news4321-newsfeed",
            "instance_id": "4999869306148693425",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "zlnlMtk_j5Y=",
            "metadata_startup_script": "#!/bin/bash\necho \"Provisioning docker image gcr.io/swift-firmament-358410/newsfeed:latest\" | tee /var/log/provision.log\n\nexport HOME=\"/home/cloudservice\"\n\n# cleanup previous deployment\ndocker stop newsfeed || true\ndocker rm newsfeed || true\n\ndocker-credential-gcr configure-docker\n\ndocker pull gcr.io/swift-firmament-358410/newsfeed:latest\n\ndocker run -d \\\n  --name newsfeed \\\n  --restart always \\\n  -p 8081:8081 \\\n  gcr.io/swift-firma [...]
            "name": "news4321-newsfeed",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.238.198.133",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/global/networks/vpc-news4321",
                "network_ip": "10.5.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/regions/us-central1/subnetworks/subnet-news4321",
                "subnetwork_project": "swift-firmament-358410"
              }
            ],
            "project": "swift-firmament-358410",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/zones/us-central1-a/instances/news4321-newsfeed",
            "service_account": [
              {
                "email": "news4321-compute@swift-firmament-358410.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform.read-only",
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/source.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "newsfeed"
            ],
            "tags_fingerprint": "U_zm0Jk_y80=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_subnetwork.subnet",
            "data.template_file.newsfeed_init_script",
            "google_service_account.joi-news-instances"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "quotes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-89-16108-717-9",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/zones/us-central1-a/disks/news4321-quotes"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/swift-firmament-358410/zones/us-central1-a/instances/news4321-quotes",
            "instance_id": "3059317281254221233",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "bCJPGDYucYo=",
            "metadata_startup_script": "#!/bin/bash\necho \"Provisioning docker image gcr.io/swift-firmament-358410/quotes:latest\" | tee /var/log/provision.log\n\nexport HOME=\"/home/cloudservice\"\n# cleanup previous deployment\ndocker stop quotes || true\ndocker rm quotes || true\n\ndocker-credential-gcr configure-docker\n\ndocker pull gcr.io/swift-firmament-358410/quotes:latest\n\ndocker run -d \\\n  --name quotes \\\n  --restart always \\\n  -p 8082:8082 \\\n  gcr.io/swift-firmament-358410/ [...]
            "name": "news4321-quotes",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.170.32.204",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/global/networks/vpc-news4321",
                "network_ip": "10.5.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/regions/us-central1/subnetworks/subnet-news4321",
                "subnetwork_project": "swift-firmament-358410"
              }
            ],
            "project": "swift-firmament-358410",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/swift-firmament-358410/zones/us-central1-a/instances/news4321-quotes",
            "service_account": [
              {
                "email": "news4321-compute@swift-firmament-358410.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform.read-only",
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/source.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "quotes"
            ],
            "tags_fingerprint": "DIGykcS5fSg=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_subnetwork.subnet",
            "data.template_file.quotes_init_script",
            "google_service_account.joi-news-instances"
          ]
        }
      ]
    }
  ]
}